@@ -31,7 +31,6 @@
 }
 
 .np-info-cover {
-    background-size:cover;
     background-color:#000;
 }
 
