@@ -26,7 +26,6 @@
 }
 
 .np-info-cover {
-    background-size:cover;
     background-color:#fff;
 }
 
